--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -1,4 +1,4 @@
-= semantic_form_for @project do |f|
+= semantic_form_for @project, :remote => true, :validate => true do |f|
   -if @project.errors.any?
     #error_explanation
       %h2= "#{pluralize(@project.errors.count, "error")} prohibited this project from being saved:"
